--- a/pug/404.pug
+++ b/pug/404.pug
@@ -11,7 +11,8 @@ block view
         .input-prepend.input-group
           .input-group-prepend
             span.input-group-text
-              img.c-icon(src="assets/icons/magnifying-glass.svg" width="16" height="16" alt="CoreUI Icons Magnifying Glass")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-magnifying-glass")
           input#prependedInput.form-control(size='16', type='text', placeholder='What are you looking for?')
           span.input-group-append
             button.btn.btn-info(type='button') Search
