--- a/pug/buttons/buttons.pug
+++ b/pug/buttons/buttons.pug
@@ -406,23 +406,28 @@ block view
         .row.align-items-center.mt-3
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-primary(type='button')
-              i.fa.fa-lightbulb-o
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
               |  Standard Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-outline-secondary(type='button')
-              i.fa.fa-lightbulb-o
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
               |  Outline Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-ghost-success(type='button')
-              i.fa.fa-lightbulb-o
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
               |  Ghost Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-square.btn-warning(type='button')
-              i.fa.fa-lightbulb-o
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
               |  Square Button
           .col-6.col-sm-4.col-md.mb-3.mb-xl-0.text-center
             button.btn.btn-pill.btn-danger(type='button')
-              i.fa.fa-lightbulb-o
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lightbulb")
               |  Pill Button
     .row
       .col-md-6
