--- a/pug/notifications/modals.pug
+++ b/pug/notifications/modals.pug
@@ -1,12 +1,11 @@
 extends /_layout/default.pug
 
 block view
-  .animated.fadeIn
+  .fadeIn
     .row
       .col-lg-12
         .card
           .card-header
-            i.fa.fa-align-justify
             |  Bootstrap Modals
           .card-body
             // Button trigger modal
