--- a/pug/_layout/default.pug
+++ b/pug/_layout/default.pug
@@ -7,13 +7,13 @@ html(lang='en')
     base(href=base)
     include ../_partials/head.pug
     block styles
-  body.c-app.c-default-layout
-    include ../_partials/header.pug
+  body.c-app
     include ../_partials/sidebar.pug
-    .c-body
-      main(class='c-main')
-        include ../_partials/breadcrumb.pug
-        .container-fluid
-          block view
-    include ../_partials/footer.pug
+    .c-wrapper
+      include ../_partials/header.pug
+      .c-body
+        main(class='c-main')
+          .container-fluid
+            block view
+      include ../_partials/footer.pug
     include ../_partials/scripts.pug
