--- a/pug/_layout/pages.pug
+++ b/pug/_layout/pages.pug
@@ -1,4 +1,4 @@
-- var static = true
+- var ajax = true
 - var page = true
 doctype html
 include ../_partials/banner.pug
@@ -8,7 +8,7 @@ html(lang='en')
     base(href=base)
     include ../_partials/head.pug
     block styles
-  body.c-app.c-default-layout.flex-row.align-items-center
+  body.c-app.flex-row.align-items-center
     block view
 
     include ../_partials/scripts.pug
