--- a/pug/_partials/breadcrumb.pug
+++ b/pug/_partials/breadcrumb.pug
@@ -1,18 +1,8 @@
 // Breadcrumb
-ol.breadcrumb
+ol.breadcrumb.border-0.m-0
   li.breadcrumb-item Home
   if !starter
     li.breadcrumb-item
       a(href="#") Admin
     li.breadcrumb-item.active Dashboard
     // Breadcrumb Menu
-    li.breadcrumb-menu.d-md-down-none
-      .btn-group(role="group" aria-label="Button group")
-        a.btn(href="#")
-          img.c-icon(src="assets/icons/speech.svg" alt="CoreUI Icons Speech")
-        a.btn(href="./")
-          img.c-icon(src="assets/icons/graph.svg" alt="CoreUI Icons Graph")
-          |   Dashboard
-        a.btn(href="#")
-          img.c-icon(src="assets/icons/settings.svg" alt="CoreUI Icons Settings")
-          |   Settings
