--- a/pug/_partials/footer.pug
+++ b/pug/_partials/footer.pug
@@ -4,4 +4,4 @@ footer.c-footer
     |  &copy; 2019 creativeLabs.
   div.ml-auto
     | Powered by&nbsp;
-    a(href='https://coreui.io') CoreUI
+    a(href='https://coreui.io/') CoreUI
