--- a/pug/base/tabs.pug
+++ b/pug/base/tabs.pug
@@ -76,13 +76,16 @@ block view
         ul.nav.nav-tabs(role='tablist')
           li.nav-item
             a.nav-link.active(data-toggle='tab', href='#home2', role='tab', aria-controls='home')
-              img.c-icon(src="assets/icons/calculator.svg" alt="CoreUI Icons Calculator")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
           li.nav-item
             a.nav-link(data-toggle='tab', href='#profile2', role='tab', aria-controls='profile')
-              img.c-icon(src="assets/icons/basket.svg" alt="CoreUI Icons Basket")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket")
           li.nav-item
             a.nav-link(data-toggle='tab', href='#messages2', role='tab', aria-controls='messages')
-              img.c-icon(src="assets/icons/chart-pie.svg" alt="CoreUI Icons Pie Chart")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
         .tab-content
           #home2.tab-pane.active(role='tabpanel')
             | 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -95,15 +98,18 @@ block view
         ul.nav.nav-tabs(role='tablist')
           li.nav-item
             a.nav-link.active(data-toggle='tab', href='#home3', role='tab', aria-controls='home')
-              img.c-icon(src="assets/icons/calculator.svg" alt="CoreUI Icons Calculator")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
               |  Calculator
           li.nav-item
             a.nav-link(data-toggle='tab', href='#profile3', role='tab', aria-controls='profile')
-              img.c-icon(src="assets/icons/basket.svg" alt="CoreUI Icons Basket")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket")
               |  Shoping cart
           li.nav-item
             a.nav-link(data-toggle='tab', href='#messages3', role='tab', aria-controls='messages')
-              img.c-icon(src="assets/icons/chart-pie.svg" alt="CoreUI Icons Pie Chart")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
               |  Charts
         .tab-content
           #home3.tab-pane.active(role='tabpanel')
@@ -117,17 +123,20 @@ block view
         ul.nav.nav-tabs(role='tablist')
           li.nav-item
             a.nav-link.active(data-toggle='tab', href='#home4', role='tab', aria-controls='home')
-              img.c-icon(src="assets/icons/calculator.svg" alt="CoreUI Icons Calculator")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator")
               |  Calculator
               span.badge.badge-success New
           li.nav-item
             a.nav-link(data-toggle='tab', href='#profile4', role='tab', aria-controls='profile')
-              img.c-icon(src="assets/icons/basket.svg" alt="CoreUI Icons Basket")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket")
               |  Shoping cart
               span.badge.badge-pill.badge-danger 29
           li.nav-item
             a.nav-link(data-toggle='tab', href='#messages4', role='tab', aria-controls='messages')
-              img.c-icon(src="assets/icons/chart-pie.svg" alt="CoreUI Icons Pie Chart")
+              svg.c-icon
+                use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie")
               |  Charts
         .tab-content
           #home4.tab-pane.active(role='tabpanel')
