--- a/pug/login.pug
+++ b/pug/login.pug
@@ -12,12 +12,14 @@ block view
               .input-group.mb-3
                 .input-group-prepend
                   span.input-group-text
-                    img.c-icon(src="assets/icons/user.svg" width="16" height="16" alt="CoreUI Icons User")
+                    svg.c-icon
+                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user")
                 input.form-control(type='text', placeholder='Username')
               .input-group.mb-4
                 .input-group-prepend
                   span.input-group-text
-                    img.c-icon(src="assets/icons/lock-locked.svg" width="16" height="16" alt="CoreUI Icons Lock Locked")
+                    svg.c-icon
+                      use(xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked")
                 input.form-control(type='password', placeholder='Password')
               .row
                 .col-6
@@ -30,4 +32,4 @@ block view
                 h2 Sign up
                 p
                   | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                button.btn.btn-primary.active.mt-3(type='button') Register Now!
+                button.btn.btn-lg.btn-outline-light.mt-3(type='button') Register Now!
